FEAT: Add logic to change like button icon if user liked post
Add special variable in context:
* "is_liked" for the ProductDetailView
* "liked_products" for the _ProductListView and HomeView
Add function to get a list of IDs for all products liked by the given user in the shop/services.py
Add if-block to check and change like button icon name

--- a/lapzone/shop/templates/shop/home.html
+++ b/lapzone/shop/templates/shop/home.html
@@ -126,7 +126,7 @@
                             data-href="{{ product_url }}like/"
                             class="like btn btn-danger me-auto"
                         >
-                            <ion-icon name="heart-outline"></ion-icon>
+                            <ion-icon name="heart{% if product.id not in liked_products %}-outline{% endif %}"></ion-icon>
                         </button>
                     {% else %}
                         <span></span>
