FEAT: Add a link to user's cart detail page into the site header
in the _base.html

--- a/lapzone/templates/_base.html
+++ b/lapzone/templates/_base.html
@@ -170,8 +170,18 @@
 										</label>
 									</div>
 								</li>
-                                <!-- Link to either user profile or login page -->
-								<li class="nav-item">
+								<li 
+                                    class="nav-item d-flex"
+                                >
+                                    <!-- Link to user's cart detail page -->
+									<a
+                                        href="{% url 'cart:detail' %}"
+                                        class="d-block text-decoration-none me-3"
+                                    >
+                                        <ion-icon name="cart" class="pt-1" ></ion-icon>
+                                    </a>
+
+                                    <!-- Link to either user profile or login page -->
                                     <!-- TODO: add url to customer profile page instead of # -->
 									<a
                                         class="d-block text-decoration-none"
