FEAT: Add the cart_btn.js in shop/_base.html in the 'scripts' block

--- a/lapzone/shop/templates/shop/_base.html
+++ b/lapzone/shop/templates/shop/_base.html
@@ -14,5 +14,9 @@
     defer
     src="{% static 'js/shop/like_btn.js' %}"
 ></script>
+<script
+    defer
+    src="{% static 'js/cart/cart_btn.js' %}"
+></script>
 
 {% endblock scripts %}
