--- a/lapzone/shop/templates/shop/home.html
+++ b/lapzone/shop/templates/shop/home.html
@@ -132,9 +132,21 @@
                         <span></span>
                     {% endif %}
 
-						<a href="#" class="btn btn-success btn-sm ms-auto content-center">
-							<ion-icon name="cart-outline"></ion-icon>
-						</a>
+                    {% if product.id|stringformat:"s" in cart.cart %}
+                        <a
+                            href="{% url 'cart:detail' %}"
+                            class="btn btn-success ms-2"
+                        >
+                            <ion-icon name="cart"></ion-icon>
+                        </a>
+                    {% else %} 
+                        <button
+                            class="cart btn btn-success ms-2"
+                            data-product_id="{{ product.id }}"
+                        >
+                            <ion-icon name="cart-outline"></ion-icon>
+                        </button>
+                    {% endif %}
 					</div>
 				</div>
 				{% endwith %}
