--- a/lapzone/shop/templates/shop/product_detail.html
+++ b/lapzone/shop/templates/shop/product_detail.html
@@ -82,17 +82,30 @@
 		<div class="d-flex mb-4">
         {% if user.is_authenticated %}
             <button
-                data-href="{{ product.get_absolute_url }}like/"
                 class="like btn btn-danger me-auto"
+                data-href="{{ product.get_absolute_url }}like/"
             >
                 <ion-icon name="heart{% if not is_liked %}-outline{% endif %}"></ion-icon>
             </button>
         {% else %}
             <span></span>
         {% endif %}
-			<a href="#" class="btn btn-success ms-2">
-				<ion-icon name="cart-outline"></ion-icon>
-			</a>
+			
+        {% if product.id|stringformat:"s" in cart.cart %}
+            <a
+                href="{% url 'cart:detail' %}"
+                class="btn btn-success ms-2"
+            >
+                <ion-icon name="cart"></ion-icon>
+            </a>
+        {% else %} 
+            <button
+                class="cart btn btn-success ms-2"
+                data-product_id="{{ product.id }}"
+            >
+                <ion-icon name="cart-outline"></ion-icon>
+            </button>
+        {% endif %}
 		</div>
 		<!-- Price and link to reviews -->
 		<div class="d-flex justify-content-between align-items-center">
