FEAT: Add 'next' GET param for the url for login in the _base.html

--- a/lapzone/templates/_base.html
+++ b/lapzone/templates/_base.html
@@ -191,7 +191,7 @@
                                     <!-- TODO: add url to customer profile page instead of # -->
 									<a
                                         class="d-block text-decoration-none"
-                                        href="{% if user.is_authenticated %}#{% else %}{% url 'account_login' %}{% endif %}"
+                                        href="{% if user.is_authenticated %}#{% else %}{% url 'account_login' %}{% endif %}?next={{ request.path }}"
 									>
 										<ion-icon
 											class="pt-1"
