--- a/lapzone/shop/templates/shop/home.html
+++ b/lapzone/shop/templates/shop/home.html
@@ -9,6 +9,7 @@
 	.my-carousel .carousel-item img { max-height: 70vh; }
 
 	.white-space-nowrap { white-space: nowrap; }
+    .product__title a { white-space: normal; }
 
     .product { min-width: 250px; }
     @media screen and (max-width: 768px) { /* Bootstrap5 .md breakpoint */
@@ -88,68 +89,11 @@
 				class="white-space-nowrap overflow-auto d-flex align-items-center"
 			>
 				{% for product in recently_added_products %}
-                {% with product_url=product.get_absolute_url %}
 				<div
 					class="product d-inline-block d-flex flex-column justify-content-between rounded p-2 m-0 me-3"
 				>
-					<div class="product__image w-100 mb-2">
-						<a
-							class="w-100 opacity-1"
-							href="{{ product_url }}"
-						>
-							<img
-								class="img-fluid w-100 rounded"
-								alt="{{ product.name }} image"
-								src="{{ product.image.url }}"
-							/>
-						</a>
-					</div>
-					<div class="product__details mb-3">
-						<hr class="table-group-divider" />
-						<h5 class="mb-2 product__title">
-							<a
-                                style="white-space: normal;"
-								href="{{ product_url }}"
-								class="text-decoration-none text-center"
-							>
-								{{ product.name |truncatechars:30 }}
-							</a>
-						</h5>
-						<hr class="table-group-divider" />
-						<h4><b>{{ product.price }}$</b></h4>
-					</div>
-					<div
-						class="product__buttons d-flex justify-content-between"
-					>
-                    {% if user.is_authenticated %}
-                        <button
-                            data-href="{{ product_url }}like/"
-                            class="like btn btn-danger me-auto"
-                        >
-                            <ion-icon name="heart{% if product.id not in liked_products %}-outline{% endif %}"></ion-icon>
-                        </button>
-                    {% else %}
-                        <span></span>
-                    {% endif %}
-
-                    {% if product.id|stringformat:"s" in cart.cart %}
-                        <a
-                            href="{% url 'cart:detail' %}"
-                            class="btn btn-success ms-2"
-                        >
-                            <ion-icon name="cart"></ion-icon>
-                        </a>
-                    {% else %} 
-                        <button
-                            class="cart btn btn-success ms-2"
-                            data-product_id="{{ product.id }}"
-                        >
-                            <ion-icon name="cart-outline"></ion-icon>
-                        </button>
-                    {% endif %}
-					</div>
+					{% include 'shop/utils/_product_card.html' with product=product %} 
 				</div>
-				{% endwith %}
 				{% endfor %}
 			</div>
 
