--- a/lapzone/shop/templates/shop/product_list.html
+++ b/lapzone/shop/templates/shop/product_list.html
@@ -125,65 +125,11 @@
                 </ul>
             </div>
             {% for product in page_obj %}
-            {% with product_url=product.get_absolute_url %}
             <div class="col-lg-4 col-md-6 col-sm-12 d-flex align-items-stretch">
                 <div class="product w-100 d-flex flex-column justify-content-between rounded mb-3">
-                    <div class="product__image w-100 mb-2">
-                        <a 
-                            class="w-100 opacity-1"
-                            href="{{ product_url }}" 
-                        >
-                            <img
-                                src="{{ product.image.url }}"
-                                alt="{{ product.name }} image"
-                                class="img-fluid w-100 rounded"
-                            />
-                        </a>
-                    </div>
-                    <div class="product__details mb-3">
-                        <hr class="table-group-divider" />
-                        <h4 class="mb-2 product__title">
-                            <a
-                                href="{{ product_url }}"
-                                class="text-decoration-none text-center"
-                            >
-                                {{ product.name |truncatechars:30 }}
-                            </a>
-                        </h4>
-                        <hr class="table-group-divider" />
-                        <h3><b>{{ product.price }}$</b></h3>
-                    </div>
-                    <div class="product__buttons d-flex justify-content-between">
-                    {% if user.is_authenticated %}
-                        <button
-                            data-href="{{ product_url }}like/"
-                            class="like btn btn-danger me-auto"
-                        >
-                            <ion-icon name="heart{% if product.id not in liked_products %}-outline{% endif %}"></ion-icon>
-                        </button>
-                    {% else %}
-                        <span></span>
-                    {% endif %} 
-                        
-                    {% if product.id|stringformat:"s" in cart.cart %}
-                        <a
-                            href="{% url 'cart:detail' %}"
-                            class="btn btn-success ms-2"
-                        >
-                            <ion-icon name="cart"></ion-icon>
-                        </a>
-                    {% else %} 
-                        <button
-                            class="cart btn btn-success ms-2"
-                            data-product_id="{{ product.id }}"
-                        >
-                            <ion-icon name="cart-outline"></ion-icon>
-                        </button>
-                    {% endif %}
-                    </div>
+                    {% include 'shop/utils/_product_card.html' with product=product %}
                 </div>
             </div>
-            {% endwith %} 
             {% empty %}
                 <div>
                     {% include 'utils/_alert.html' with message="There are no products that match your search criteria." category="primary" dismissible=False only %}
