PERF: Add loading="lazy" for <img> in the _product_card.html

--- a/lapzone/shop/templates/shop/utils/_product_card.html
+++ b/lapzone/shop/templates/shop/utils/_product_card.html
@@ -3,6 +3,7 @@
 <div class="product__image w-100 mb-2">
 	<a class="w-100 opacity-1" href="{{ product_url }}">
 		<img
+            loading="lazy"
 			class="img-fluid w-100 rounded"
 			alt="{{ product.name }} image"
 			src="{{ product.image.url }}"
