--- a/lapzone/cart/templates/cart/detail.html
+++ b/lapzone/cart/templates/cart/detail.html
@@ -9,7 +9,12 @@
     .white-space-normal { white-space: normal; }
 
     .table { color: var(--text-color) }
-    .table td { border: 0; }
+    .table td, .table th { 
+        flex: 1; 
+        border: 0; 
+        text-align: center; 
+    }
+    .table .image-td { width: 10%; }
     .table img { min-width: 100px; }
 </style>
 {% endblock styles %} 
@@ -26,6 +31,18 @@
     <div class="panel-bg-color col-12 p-3">
         <div class="white-space-nowrap overflow-auto">
             <table class="table">
+                <thead>
+                    <tr
+                        class="d-flex justify-content-between align-items-center"
+                    >
+                        <th class="me-4">Image</th>
+                        <th>Product</th>
+                        <th>Unit price</th>
+                        <th>Quantity</th>
+                        <th>Price</th>
+                        <th>Remove</th>
+                    </tr>
+                </thead>
                 <tbody>
                     {% for item_dict in cart %}
                     {% with product_url=item_dict.product.get_absolute_url %}
@@ -33,7 +50,7 @@
                         class="d-flex justify-content-between align-items-center border-1 border-bottom py-2"
                     >
                         <!-- Product image -->
-                        <td class="w-25 me-4">
+                        <td class="image-td me-4">
                             <a href="{{ product_url }}" class="opacity-1">
                                 <img
                                     class="img-fluid w-100"
@@ -48,13 +65,17 @@
                                 {{ item_dict.product.name }}
                             </a>
                         </td>
-                        <!-- Product price -->
+                        <!-- Product unit price -->
                         <td class="fs-4">
                             {{ item_dict.price }}$
                         </td>
                         <!-- Quantity -->
                         <td class="fs-3">
                             {{ item_dict.quantity }}
+                        </td>
+                        <!-- Product total price -->
+                        <td class="fs-4">
+                            {{ item_dict.total_price }}$
                         </td>
                         <!-- "Remove" button -->
                         <td>
