--- a/lapzone/cart/templates/cart/detail.html
+++ b/lapzone/cart/templates/cart/detail.html
@@ -16,6 +16,7 @@
     }
     .table .image-td { width: 10%; }
     .table img { min-width: 100px; }
+    .table input[type="number"] { width: 75px; }
 </style>
 {% endblock styles %} 
 
@@ -33,7 +34,7 @@
             <table class="table">
                 <thead>
                     <tr
-                        class="d-flex justify-content-between align-items-center"
+                        class="d-flex justify-content-between align-items-center border-1 border-bottom"
                     >
                         <th class="me-4">Image</th>
                         <th>Product</th>
@@ -66,15 +67,30 @@
                             </a>
                         </td>
                         <!-- Product unit price -->
-                        <td class="fs-4">
+                        <td 
+                            class="unit_price fs-4"
+                            id="unit_price_{{ forloop.counter }}"
+                        >
                             {{ item_dict.price }}$
                         </td>
-                        <!-- Quantity -->
-                        <td class="fs-3">
-                            {{ item_dict.quantity }}
+                        <!-- Quantity number input -->
+                        <td>
+                            <input 
+                                min="1" 
+                                max="10" 
+                                type="number"
+                                name="quantity" 
+                                value="{{ item_dict.quantity }}"
+                                id="quantity_field_{{ forloop.counter }}"
+                                data-product_id="{{ item_dict.product.id }}"
+                                class="form-control text-center fs-5 me-auto ms-auto"
+                            >
                         </td>
                         <!-- Product total price -->
-                        <td class="fs-4">
+                        <td 
+                            class="fs-4"
+                            id="total_price_{{ forloop.counter }}"
+                        >
                             {{ item_dict.total_price }}$
                         </td>
                         <!-- "Remove" button -->
@@ -99,7 +115,7 @@
 
         <div class="d-flex justify-content-between fs-4 mt-3">
             <b>Total price: </b>
-            <span>{{ cart.get_total_price }}$</span>
+            <span id="total_price">{{ cart.get_total_price }}$</span>
         </div>
 
         <div class="d-flex justify-content-end mt-4">
@@ -137,4 +153,5 @@
 
 {% load static %}
 <script defer src="{% static 'js/cart/remove_btn.js' %}"></script>
+<script defer src="{% static 'js/cart/quantity_field.js' %}"></script>
 {% endblock scripts %} 
