--- a/lapzone/cart/templates/cart/detail.html
+++ b/lapzone/cart/templates/cart/detail.html
@@ -1,24 +1,7 @@
-{% extends '_base.html' %} 
+{% extends 'cart/_base.html' %} 
 
 {% block title %}Cart{% endblock %} 
 {% block content_title %}Your shopping cart{% endblock %} 
-
-{% block styles %}
-<style>
-    .white-space-nowrap { white-space: nowrap; }
-    .white-space-normal { white-space: normal; }
-
-    .table { color: var(--text-color) }
-    .table td, .table th { 
-        flex: 1; 
-        border: 0; 
-        text-align: center; 
-    }
-    .table .image-td { width: 10%; }
-    .table img { min-width: 100px; }
-    .table input[type="number"] { width: 75px; }
-</style>
-{% endblock styles %} 
 
 
 {% block content %}
