--- a/lapzone/shop/templates/shop/product_list.html
+++ b/lapzone/shop/templates/shop/product_list.html
@@ -152,5 +152,6 @@
 {% block scripts %}
 {{ block.super }}
 
-<script src="{% static 'js/shop/product_list.js' %}" defer></script>
+<script defer src="{% static 'js/shop/product_list.js' %}"></script>
+<script defer src="{% static 'js/resize_pagination.js' %}"></script>
 {% endblock %} 
