FIX: Replace product.id with quantity in the order_detail.html

--- a/lapzone/order/templates/order/order_detail.html
+++ b/lapzone/order/templates/order/order_detail.html
@@ -43,7 +43,7 @@
                         </td>
                         <!-- Order item quantity -->
                         <td class="fs-3">
-                            {{ order_item.product.id }}
+                            {{ order_item.quantity }}
                         </td>
                         <!-- Order item price -->
                         <td class="fs-4">
