--- a/lapzone/order/templates/order/email.html
+++ b/lapzone/order/templates/order/email.html
@@ -6,18 +6,15 @@
 		<title>Receipt from LapZone</title>
 		<style>
 			.receipt-container {
+				padding: 20px;
                 margin: 0 auto;
 				max-width: 600px;
-				padding: 30px 20px;
 				border: 1px solid #ccc;
                 background-color: #fff;
 			}
 
 			.header { width: 100%; }
-			.header img {
-                max-width: 100%;
-				max-height: 80px;
-			}
+			.header img { width: 100%; }
             .header h1 {
                 font-size: 24px;
                 font-weight: bold;
@@ -45,7 +42,7 @@
 			<div class="header">
 				<img
                     alt="LapZone Logo"
-                    src="{% static 'images/site_header.webp' %}"
+                    src="https://raw.githubusercontent.com/Gubchik123/LapZone/master/lapzone/static/images/site_header.webp"
 				/>
 				<h1>Receipt from LapZone</h1>
 			</div>
