--- a/lapzone/order/templates/order/order_checkout.html
+++ b/lapzone/order/templates/order/order_checkout.html
@@ -19,9 +19,22 @@
 
 
 {% block order_create_form %}
+<!-- Full screen loader -->
+<div
+    id="screen-loader"
+    style="z-index: 100; top: 0; left: 0;"
+    class="d-none content-center h-100 w-100 position-fixed bg-dark bg-opacity-75"
+>
+    <div
+        role="status"
+        class="spinner-border text-white"
+        style="width: 3rem; height: 3rem"
+    ></div>
+</div>
+
 <div class="row px-3 mb-3">
     <div class="panel-bg-color col-12 p-3">
-        <form action="" method="post">
+        <form action="" method="post" id="checkout-form">
             {% csrf_token %}
 
             {{ form.as_p }}
@@ -29,6 +42,7 @@
             <input 
                 type="submit" 
                 value="Checkout" 
+                id="checkout-submit-btn"
                 class="btn btn-success btn-lg mt-3"
             >
         </form>
@@ -44,6 +58,10 @@
 {{ block.super }}
 
 {% load static %}
+<script 
+    defer
+    src="{% static 'js/order/submit_loader.js' %}" 
+></script>
 <script 
     defer
     src="{% static 'js/order/is_create_profile_switcher.js' %}" 
