FEAT: Move the 'Back to order list' button to the 'to_right_of_content_title'
in the order_detail.html

--- a/lapzone/order/templates/order/order_detail.html
+++ b/lapzone/order/templates/order/order_detail.html
@@ -3,16 +3,18 @@
 {% block title %}Order {{ order.id }}{% endblock %} 
 {% block content_title %}Order {{ order.id }}{% endblock %}
 
-
-{% block content %}
+{% block to_right_of_content_title %}
 <a 
     title="Back to order list"
     href="{% url 'order:list' %}" 
-    class="d-inline-flex content-center btn btn-dark opacity-75 rounded-circle border mt-1 mb-4"
+    class="d-inline-flex content-center btn btn-dark opacity-75 rounded-circle border"
 >
     <ion-icon name="arrow-back-outline"></ion-icon>
 </a>
+{% endblock to_right_of_content_title %} 
 
+
+{% block content %}
 <div class="row px-3 mb-5">
     <div class="panel-bg-color col-12 p-3">
         <div class="d-flex align-items-center fs-4 mb-3">
