FEAT: Add url for the CustomerUpdateView: "update/"
Add this url for the form in the customer/detail.html

--- a/lapzone/customer/templates/customer/detail.html
+++ b/lapzone/customer/templates/customer/detail.html
@@ -85,7 +85,7 @@
     <!-- Block with user personal details (form) -->
     <div class="col-lg-9 col-md-12 px-0">
         <div id="personal-details" class="panel-bg-color p-3 rounded">
-            <form action="" method="post">
+            <form action="{% url 'customer:update' %}" method="post">
                 {% csrf_token %}
 
                 {{ form.as_p }}
