FEAT: Add url for the CustomerDeleteView: "delete/"
Add this url for the "Delete my account" button in the customer/detail.html

--- a/lapzone/customer/templates/customer/detail.html
+++ b/lapzone/customer/templates/customer/detail.html
@@ -116,8 +116,9 @@
             <p>
                 If you are sure you want to proceed with deleting your account, please click the button below.
             </p>
-            <form action="" method="post">
+            <form action="{% url 'customer:delete' %}" method="post">
                 {% csrf_token %}
+                
                 <input
                     type="submit"
                     value="Delete my account"
