FEAT: Add url for the CustomerWishListView: "wish-list/"
Add this url for the "Wish list" list-group-item in the customer/detail.html

--- a/lapzone/customer/templates/customer/detail.html
+++ b/lapzone/customer/templates/customer/detail.html
@@ -45,7 +45,7 @@
                 Change password
             </a>
             <a 
-                href="#" 
+                href="{% url 'customer:wish_list' %}" 
                 class="list-group-item list-group-item-action content-between"
             >
                 Wish list
