--- a/lapzone/order/templates/order/order_detail.html
+++ b/lapzone/order/templates/order/order_detail.html
@@ -19,7 +19,7 @@
     <div class="panel-bg-color col-12 p-3">
         <div class="d-flex align-items-center fs-4 mb-3">
             <b>Order date: </b> &nbsp;
-            <span>{{ order.created|date:"F d, Y, H:i A" }}</span>
+            <span>{{ order.created|date:"F d, Y, H:i" }}</span>
         </div>
         
         <div class="fs-4 mb-1">
