--- a/lapzone/order/templates/order/order_list.html
+++ b/lapzone/order/templates/order/order_list.html
@@ -45,7 +45,7 @@
                         </td>
                         <!-- Order created datetime -->
                         <td class="fs-5 me-2 white-space-normal">
-                            {{ order.created|date:"F d, Y, H:i A" }}
+                            {{ order.created|date:"F d, Y, H:i" }}
                         </td>
                         <!-- "Remove" button -->
                         <td class="me-2">
