FEAT: Remake the mailing form in the footer in the _base.html
Use the 'mailing_form' from context for email field
Add form url to the MailingCreateView

--- a/lapzone/templates/_base.html
+++ b/lapzone/templates/_base.html
@@ -271,33 +271,24 @@
 						</div>
 
 						<div class="col-md-5 offset-md-1 mb-3">
-							<form method="post">
-								<h5>Subscribe to our newsletter</h5>
-								<p>
-									Monthly digest of what's new and exciting
-									from us.
-								</p>
+                            <h5>Subscribe to our mailing</h5>
+                            <p>
+                                Monthly digest of what's new and exciting
+                                from us.
+                            </p>
+							<form action="{% url 'mailing:create' %}" method="post">
 								<div
 									class="d-flex flex-column flex-sm-row w-100 gap-2"
 								>
-									<label
-										for="newsletter1"
-										class="visually-hidden"
-									>
-										Email address
-									</label>
-									<input
-										id="newsletter1"
-										type="text"
-										class="form-control"
-										placeholder="Email address"
-									/>
-									<button
-										class="btn btn-primary"
-										type="button"
-									>
-										Subscribe
-									</button>
+                                    {% csrf_token %}
+
+                                    {{ mailing_form.email }}
+
+                                    <input 
+                                        type="submit" 
+                                        value="Subscribe" 
+                                        class="btn btn-primary"
+                                    >
 								</div>
 							</form>
 						</div>
