--- a/lapzone/templates/_base.html
+++ b/lapzone/templates/_base.html
@@ -204,6 +204,19 @@
 				</nav>
 			</header>
 
+            <!-- Full screen loader -->
+            <div
+                id="screen-loader"
+                style="z-index: 100; top: 0; left: 0;"
+                class="d-none content-center h-100 w-100 position-fixed bg-dark bg-opacity-75"
+            >
+                <div
+                    role="status"
+                    class="spinner-border text-white"
+                    style="width: 3rem; height: 3rem"
+                ></div>
+            </div>
+
 			<main>
 				<div class="container-fluid">
 					<div class="row">
