--- a/lapzone/templates/_base.html
+++ b/lapzone/templates/_base.html
@@ -357,6 +357,7 @@
 		></script>
 
 		<!-- My scripts -->
+		<script src="{% static 'js/loading_form_btn.js' %} " defer></script>
 		<script src="{% static 'js/go_to_top_btn.js' %} " defer></script>
 		<script src="{% static 'js/toggle_theme.js' %} " defer></script>
 
