--- a/lapzone/templates/_base.html
+++ b/lapzone/templates/_base.html
@@ -300,7 +300,7 @@
                                     <input 
                                         type="submit" 
                                         value="Subscribe" 
-                                        class="btn btn-primary"
+                                        class="loading btn btn-primary"
                                     >
 								</div>
 							</form>
