--- a/lapzone/templates/account/signup.html
+++ b/lapzone/templates/account/signup.html
@@ -25,7 +25,10 @@
             />
             {% endif %}
 
-            <button class="btn btn-success btn-lg d-block mt-3" type="submit">
+            <button 
+                type="submit"
+                class="loading btn btn-success btn-lg d-block mt-3" 
+            >
                 Sign Up &raquo;
             </button>
         </form>
